unpackaged/objects/TorneioNivel__c.object
<CustomObject>
    <fields>
        <fullName>DuracaoBlinds__c</fullName>
        <label>Duração Blind (Min.)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <label>Nível</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProximoNivel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Próximo Nível</label>
        <referenceTo>TorneioNivel__c</referenceTo>
        <relationshipLabel>Torneios Níveis</relationshipLabel>
        <relationshipName>Torneios_Niveis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TorneioEstrutura__c</fullName>
        <label>Torneio Estrutura</label>
        <referenceTo>TorneioEstrutura__c</referenceTo>
        <relationshipLabel>Torneios Níveis</relationshipLabel>
        <relationshipName>Torneios_Niveis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ValorAnte__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Ante</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorBig__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Big</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorSmall__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Small</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Torneio Nível</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Nivel__c</columns>
        <columns>NAME</columns>
        <columns>TorneioEstrutura__c</columns>
        <columns>DuracaoBlinds__c</columns>
        <columns>ValorBig__c</columns>
        <columns>ValorSmall__c</columns>
        <columns>ValorAnte__c</columns>
        <columns>ProximoNivel__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de TorneioNivel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torneios Níveis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>